(In [16049]) * implemented a ctrl-click menu for the vouts (refs #302 (closed))
currently loaded through rightMouseUp because rightMouseDown, etc. don't register any NSRightMouseDowns. If anybody got an idea why, I would be willing to change this of cause, since the current way is quite slower in the user's experience.
the Snapshot item doesn't work yet (it triggers the fullscreen-event)
localisation support is complete
Any comments and wanteds for further items are welcome :)